# zadanie_home.pl

./: CMakeLists.txt  README.md  main.c
input_processor/: CMakeLists.txt
input_processor/include/: input_processor.h
input_processor/src/: input_processor.c
process_info/: CMakeLists.txt
process_info/include/: process_info.h
process_info/src/: process_info.c
utilities/: CMakeLists.txt
utilities/include/: utilities.h
utilities/src/: utilities.c
